--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
     content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta name="google-site-verification" content="5Sga5VqXk5CSqDeDLW6HaFP8dMFVAqdL0ikHLzs2ak8" />
   <link href="%PUBLIC_URL%/assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <title>Rabby Wallet</title>
+  <title>Lux Wallet</title>
   <meta content="The game-changing wallet for Ethereum and all EVM chains" name="description">
-  <meta name="twitter:title" content="Rabby">
+  <meta name="twitter:title" content="Lux">
   <meta name="twitter:description" content="The game-changing wallet for Ethereum and all EVM chains">
   <meta name="twitter:image" content="https://rabby.io/assets/logos/logo_twitter.png">
-  <meta name="twitter:site" content="@Rabby_io">
+  <meta name="twitter:site" content="@Lux_io">
   <meta name="twitter:card" content="summary">
   <script>
     if (
