--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta content="The game-changing wallet for Ethereum and all EVM chains" name="description">
   <meta name="twitter:title" content="Lux">
   <meta name="twitter:description" content="The game-changing wallet for Ethereum and all EVM chains">
-  <meta name="twitter:image" content="https://rabby.io/assets/logos/logo_twitter.png">
+  <meta name="twitter:image" content="https://luxwallet-xyz.vercel.app/assets/logos/logo_twitter.png">
   <meta name="twitter:site" content="@Lux_io">
   <meta name="twitter:card" content="summary">
   <script>
