--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport"
     content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta name="google-site-verification" content="5Sga5VqXk5CSqDeDLW6HaFP8dMFVAqdL0ikHLzs2ak8" />
-  <link href="%PUBLIC_URL%/assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="./assets/favicon.png" rel="shortcut icon" type="image/x-icon">
   <title>Lux Wallet</title>
   <meta content="The game-changing wallet for Ethereum and all EVM chains" name="description">
   <meta name="twitter:title" content="Lux">
